kubernetes/gateway-api/agentgateway/mcp/07-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
spec:
  parentRefs:
    - name: agentgateway
  rules:
    - backendRefs:
        - name: mcp-backend-kubernetes
          group: agentgateway.dev
          kind: AgentgatewayBackend
      matches:
      - path:
          type: PathPrefix
          value: /ai/mcps/kubernetes
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    - backendRefs:
      - name: mcp-backend-github
        group: agentgateway.dev
        kind: AgentgatewayBackend
      matches:
      - path:
          type: PathPrefix
          value: /ai/mcps/github                                                                                                                                               
      filters:                                                                                                                                                                            
      - type: URLRewrite                                                                                                                                                                  
        urlRewrite:                                                                                                                                                                       
          path:                                                                                                                                                                           
            type: ReplacePrefixMatch                                                                                                                                                      
            replacePrefixMatch: /
