kubernetes/gateway-api/agentgateway/mcp/09-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
spec:
  parentRefs:
    - name: agentgateway
  rules:
    - backendRefs:
        - name: mcp-federated
          group: agentgateway.dev
          kind: AgentgatewayBackend
      matches:
      - path:
          type: PathPrefix
          value: /ai/mcps
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
